tests/ui/doc.stderr
error: you should put `DOC_MARKDOWN` between ticks in the documentation
 --> $DIR/doc.rs:1:29
  |
1 | //! This file tests for the DOC_MARKDOWN lint
  |                             ^^^^^^^^^^^^
  |
note: lint level defined here
 --> $DIR/doc.rs:7:9
  |
7 | #![deny(doc_markdown)]
  |         ^^^^^^^^^^^^

error: you should put `foo_bar` between ticks in the documentation
 --> $DIR/doc.rs:9:9
  |
9 | /// The foo_bar function does _nothing_. See also foo::bar. (note the dot there)
  |         ^^^^^^^

error: you should put `foo::bar` between ticks in the documentation
 --> $DIR/doc.rs:9:51
  |
9 | /// The foo_bar function does _nothing_. See also foo::bar. (note the dot there)
  |                                                   ^^^^^^^^

error: you should put `Foo::some_fun` between ticks in the documentation
  --> $DIR/doc.rs:12:84
   |
12 | /// Markdown is _weird_. I mean _really weird_.  This /_ is ok. So is `_`. But not Foo::some_fun
   |                                                                                    ^^^^^^^^^^^^^

error: you should put `is::a::global:path` between ticks in the documentation
  --> $DIR/doc.rs:15:13
   |
15 | /// Here be ::is::a::global:path.
   |             ^^^^^^^^^^^^^^^^^^^^

error: you should put `NotInCodeBlock` between ticks in the documentation
  --> $DIR/doc.rs:17:21
   |
17 | /// That's not code ~NotInCodeBlock~.
   |                     ^^^^^^^^^^^^^^^

error: you should put `be_sure_we_got_to_the_end_of_it` between ticks in the documentation
  --> $DIR/doc.rs:19:5
   |
19 | /// be_sure_we_got_to_the_end_of_it
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: you should put `be_sure_we_got_to_the_end_of_it` between ticks in the documentation
  --> $DIR/doc.rs:34:5
   |
34 | /// be_sure_we_got_to_the_end_of_it
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: you should put `be_sure_we_got_to_the_end_of_it` between ticks in the documentation
  --> $DIR/doc.rs:42:5
   |
42 | /// be_sure_we_got_to_the_end_of_it
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: you should put `be_sure_we_got_to_the_end_of_it` between ticks in the documentation
  --> $DIR/doc.rs:57:5
   |
57 | /// be_sure_we_got_to_the_end_of_it
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: you should put `ß_foo` between ticks in the documentation
  --> $DIR/doc.rs:67:5
   |
67 | /// ß_foo
   |     ^^^^^

error: you should put `ℝ_foo` between ticks in the documentation
  --> $DIR/doc.rs:69:5
   |
69 | /// ℝ_foo
   |     ^^^^^

error: you should put `foo_ß` between ticks in the documentation
  --> $DIR/doc.rs:73:5
   |
73 | /// foo_ß
   |     ^^^^^

error: you should put `foo_ℝ` between ticks in the documentation
  --> $DIR/doc.rs:75:5
   |
75 | /// foo_ℝ
   |     ^^^^^

error: you should put `be_sure_we_got_to_the_end_of_it` between ticks in the documentation
  --> $DIR/doc.rs:91:5
   |
91 | /// be_sure_we_got_to_the_end_of_it
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: you should put `link_with_underscores` between ticks in the documentation
  --> $DIR/doc.rs:96:22
   |
96 | /// This test has [a link_with_underscores][chunked-example] inside it. See #823.
   |                      ^^^^^^^^^^^^^^^^^^^^^

error: you should put `inline_link2` between ticks in the documentation
   --> $DIR/doc.rs:100:21
    |
100 | /// It can also be [inline_link2].
    |                     ^^^^^^^^^^^^

error: you should put `be_sure_we_got_to_the_end_of_it` between ticks in the documentation
   --> $DIR/doc.rs:112:5
    |
112 | /// be_sure_we_got_to_the_end_of_it
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: you should put `CamelCaseThing` between ticks in the documentation
   --> $DIR/doc.rs:126:22
    |
126 | /// Not a title #897 CamelCaseThing
    |                      ^^^^^^^^^^^^^^

error: you should put `be_sure_we_got_to_the_end_of_it` between ticks in the documentation
   --> $DIR/doc.rs:128:5
    |
128 | /// be_sure_we_got_to_the_end_of_it
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: you should put `be_sure_we_got_to_the_end_of_it` between ticks in the documentation
   --> $DIR/doc.rs:136:5
    |
136 | /// be_sure_we_got_to_the_end_of_it
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: you should put `be_sure_we_got_to_the_end_of_it` between ticks in the documentation
   --> $DIR/doc.rs:150:5
    |
150 | /// be_sure_we_got_to_the_end_of_it
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: you should put `FooBar` between ticks in the documentation
   --> $DIR/doc.rs:162:42
    |
162 | /** E.g. serialization of an empty list: FooBar
    |                                          ^^^^^^

error: you should put `BarQuz` between ticks in the documentation
   --> $DIR/doc.rs:167:5
    |
167 | And BarQuz too.
    |     ^^^^^^

error: you should put `be_sure_we_got_to_the_end_of_it` between ticks in the documentation
   --> $DIR/doc.rs:168:1
    |
168 | be_sure_we_got_to_the_end_of_it
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: you should put `FooBar` between ticks in the documentation
   --> $DIR/doc.rs:176:42
    |
176 | /** E.g. serialization of an empty list: FooBar
    |                                          ^^^^^^

error: you should put `BarQuz` between ticks in the documentation
   --> $DIR/doc.rs:181:5
    |
181 | And BarQuz too.
    |     ^^^^^^

error: you should put `be_sure_we_got_to_the_end_of_it` between ticks in the documentation
   --> $DIR/doc.rs:182:1
    |
182 | be_sure_we_got_to_the_end_of_it
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: you should put `be_sure_we_got_to_the_end_of_it` between ticks in the documentation
   --> $DIR/doc.rs:196:5
    |
196 | /// be_sure_we_got_to_the_end_of_it
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 29 previous errors

